<resources>
    <string name="app_name">ToDo</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">new</string>
    <string name="action_search">search</string>
    <string name="unfold">▼</string>
    <string name="fold">▲</string>
    <string name="label_color">●</string>
    <string name="undone">Undone</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="this_week">Next Seven Days</string>
    <string name="after">After</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">sun</string>
    <string name="january">Jan</string>
    <string name="february">Feb</string>
    <string name="march">Mar</string>
    <string name="april">Apr</string>
    <string name="may">May</string>
    <string name="june">Jun</string>
    <string name="july">Jul</string>
    <string name="august">Aug</string>
    <string name="september">Sep</string>
    <string name="october">Oct</string>
    <string name="november">Nov</string>
    <string name="december">Dec</string>
    <string name="title_activity_event">New</string>
    <string name="ongoing">ongoing</string>
    <string name="done">done</string>
    <string name="task">Task</string>
    <string name="note">Note</string>
    <string name="label">Label</string>
    <string name="label_none">none</string>
    <string name="event_hint">Name your task here...</string>
    <string name="note_hint">Add some note if you like...</string>
    <string name="deadline">Deadline</string>
    <string name="reminders">Reminders</string>
    <string name="choose_label">Choose Label</string>
    <string name="warning">oops!</string>
    <string name="reminder_warning">Reminder Incomplete.</string>
    <string name="deadline_warning">Please set the deadline.</string>
    <string name="event_warning">Please set a name for the task.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="delete">DELETE</string>
    <string name="label_default">label1</string>
    <string name="manage_labels">Manage Labels</string>
    <string name="label_study">study</string>
    <string name="label_work">work</string>
    <string name="label_others">others</string>
    <string name="notification_undone_title_single"> task not done on time</string>
    <string name="notification_undone_title_multiple"> tasks not done on time. Pull to expand.</string>
    <string name="notification_undone_text">click to check and edit</string>
    <string name="event_blank_title">No Task Ongoing</string>
    <string name="event_blank_text">click to add one</string>
    <string name="done_blank_title">No Task Done</string>
    <string name="done_blank_text">add a new task</string>
    <string name="label_blank_title_1">No</string>
    <string name="label_blank_title_2">Task Ongoing</string>
    <string name="label_blank_text">click to add one</string>
    <string name="untitled_label_name">untitled</string>
    <string name="reminder_late_warning">Reminders cannot be later than deadline</string>
    <string name="notificatioin_new_task">click to add a new task</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_dialog_event_activty">New Event</string>
    <string name="title_activity_dialog_new">DIalogNewActivity</string>
    <string name="title_activity_dialog_event"></string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="notification">Notifications</string>
    <string name="show_notifications">Show Notifications</string>
    <string name="notification_volume">Sound</string>
    <string name="notification_vibrate">Vibration</string>
    <string name="notification_light">Breath Light</string>
    <string name="settings">Settings</string>
    <string name="quick_add_notification_title">Instant Add</string>
    <string name="quick_add_notification_detail">Add a task from a notification, so you can add anywhere without opening ToDo.</string>
    <string name="show_notification_detail">Show notifications when a task is not done on time.</string>
    <string name="top">Top</string>
    <string name="complete">Done</string>
    <string name="complete_all">All Done</string>
    <string name="delay">Tomorrow</string>
    <string name="delay_all">Tomorrow</string>
</resources>
