<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="300dp"
    android:id="@+id/wrapper_linear_layout"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.app.chengdazhi.todo.components.EventActivity"
    android:orientation="vertical">

    <LinearLayout
        android:paddingBottom="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/dialog_cancel_imageview"
            android:src="@drawable/ic_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/dialog_new_imageview"
            android:src="@drawable/ic_action_accept_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView android:text="@string/task" android:layout_width="wrap_content"
        android:textSize="16sp"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/event_name_edittext"
        android:hint="@string/event_hint"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/event_name_warning_textview"
        android:visibility="gone"
        android:textColor="@color/light_red"
        android:textSize="12sp"
        android:text="@string/event_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/note"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/event_note_edittext"
        android:hint="@string/note_hint"
        android:maxLines="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="1"
            android:text="@string/label"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/new_event_label_color_textview"
            android:text="@string/label_color"
            android:textSize="16sp"
            android:layout_weight="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/new_event_label_name_textview"
            android:text="@string/label_none"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/deadline"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/event_deadline_edittext"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/deadline_warning_textview"
        android:textSize="12sp"
        android:text="@string/deadline_warning"
        android:textColor="@color/light_red"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:text="@string/reminders"
        android:textSize="16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/event_reminders_layout_1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_reminders_edittext_1"
            android:focusable="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/event_reminders_cancel_1"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/reminder_warning_textview_1"
        android:text="@string/reminder_late_warning"
        android:textColor="@color/light_red"
        android:visibility="gone"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/event_reminders_layout_2"
        android:orientation="horizontal"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_reminders_edittext_2"
            android:focusable="false"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/event_reminders_cancel_2"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/reminder_warning_textview_2"
        android:text="@string/reminder_late_warning"
        android:textColor="@color/light_red"
        android:visibility="gone"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/event_reminders_layout_3"
        android:visibility="gone"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/event_reminders_edittext_3"
            android:focusable="false"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/event_reminders_cancel_3"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_action_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/reminder_warning_textview_3"
        android:text="@string/reminder_late_warning"
        android:textColor="@color/light_red"
        android:textSize="12sp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/event_reminders_add"
        android:src="@drawable/ic_action_new_dark"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
