<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.chengdazhi.todo.components.SettingsActivity">

    <TextView
        android:paddingTop="16dp"
        android:paddingLeft="10dp"
        android:paddingRight="16dp"
        android:paddingBottom="10dp"
        android:text="@string/notification"
        android:textColor="@color/light_green"
        android:layout_width="wrap_content"
        android:textSize="14sp"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/show_notification_imageview"
            android:layout_gravity="center_vertical"
            android:src="@drawable/notification"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


        <TextView
            android:id="@+id/show_notification_title_textview"
            android:text="@string/show_notifications"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/font_black"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--
        <LinearLayout
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/show_notification_title_textview"
                android:textColor="@color/font_black"
                android:text="@string/show_notifications"
                android:textSize="18sp"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/show_notification_detail_textview"
                android:textSize="12sp"
                android:text="@string/show_notification_detail"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
        -->

        <Switch
            android:id="@+id/show_notification_switch"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/sound_imageview"
            android:layout_marginRight="10dp"
            android:src="@drawable/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/sound_textview"
            android:textColor="@color/font_black"
            android:textSize="16sp"
            android:text="@string/notification_volume"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/sound_switch"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/vibrate_imageview"
            android:src="@drawable/vibrate"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/vibrate_textview"
            android:textColor="@color/font_black"
            android:textSize="16sp"
            android:text="@string/notification_vibrate"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:id="@+id/vibration_switch"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="2dp" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/breath_light_imageview"
            android:src="@drawable/ic_action_brightness_high"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/breath_light_textview"
            android:text="@string/notification_light"
            android:layout_gravity="center_vertical"
            android:textColor="@color/font_black"
            android:textSize="16sp"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Switch
            android:checked="true"
            android:id="@+id/breath_light_switch"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="7dp" />

    <TextView
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:text="@string/label_others"
        android:textColor="@color/light_green"
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_action_new_event"
            android:layout_width="wrap_content"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="16sp"
                android:textColor="@color/font_black"
                android:text="@string/quick_add_notification_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:textSize="12sp"
                android:text="@string/quick_add_notification_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Switch
            android:id="@+id/instant_add_switch"
            android:layout_marginRight="5dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ImageView
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="7dp" />

</LinearLayout>
